update home 27 oct 2023